attempt to fix background overflow on mobile

--- a/src/components/desktop/styles.module.css
+++ b/src/components/desktop/styles.module.css
@@ -3,6 +3,7 @@
   width: 100vw;
   height: 100%;
   background-size: cover;
+  overflow: hidden;
 }
 .desktop {
   max-height: 100%;
